--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ HTMLCSS/VJ1/firefox_JMk5xUj6V1.png
 
 HTMLCSS/VJ2/index2.html
 HTMLCSS/VJ2/vj3.7z
+HTMLCSS/Shadow/*
+HTMLCSS/VJ3/double-bubble-dark/double-bubble-dark.png
+HTMLCSS/VJ3/bin
