--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ HTMLCSS/VJ2/vj3.7z
 HTMLCSS/Shadow/*
 HTMLCSS/VJ3/double-bubble-dark/double-bubble-dark.png
 HTMLCSS/VJ3/bin
+HTMLCSS/VJ5.7z
+HTMLCSS/VJ4/aa/style.css
+HTMLCSS/VJ4/aa/index.html
