--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 vjezba.zip
 readme.txt
-HTMLCSS/VJ1/vjezba_2.7z
-HTMLCSS/VJ1/firefox_JMk5xUj6V1.png
+www/HTMLCSS/VJ1/vjezba_2.7z
+www/HTMLCSS/VJ1/firefox_JMk5xUj6V1.png
 
-HTMLCSS/VJ2/index2.html
-HTMLCSS/VJ2/vj3.7z
-HTMLCSS/Shadow/*
-HTMLCSS/VJ3/double-bubble-dark/double-bubble-dark.png
-HTMLCSS/VJ3/bin
-HTMLCSS/VJ5.7z
-HTMLCSS/VJ4/aa/style.css
-HTMLCSS/VJ4/aa/index.html
+www/HTMLCSS/VJ2/index2.html
+www/HTMLCSS/VJ2/vj3.7z
+www/HTMLCSS/Shadow/*
+www/HTMLCSS/VJ3/double-bubble-dark/double-bubble-dark.png
+www/HTMLCSS/VJ3/bin
+www/HTMLCSS/VJ5.7z
+www/HTMLCSS/VJ4/aa/style.css
+www/HTMLCSS/VJ4/aa/index.html
