--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ www/HTMLCSS/VJ3/double-bubble-dark/double-bubble-dark.png
 www/HTMLCSS/VJ3/bin
 www/HTMLCSS/VJ5.7z
 www/HTMLCSS/VJ4/aa/style.css
-www/HTMLCSS/VJ4/aa/index.html
+HTMLCSS/VJ4/aa/index.html
