--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ www/HTMLCSS/VJ5.7z
 www/HTMLCSS/VJ4/aa/style.css
 HTMLCSS/VJ4/aa/index.html
 www/HTMLCSS/VJ5/vjezba6.7z
+www/HTMLCSS/Priprema_za_kolok/zad2/slike/opis_zadatka.docx
