--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ www/HTMLCSS/VJ4/aa/style.css
 HTMLCSS/VJ4/aa/index.html
 www/HTMLCSS/VJ5/vjezba6.7z
 www/HTMLCSS/Priprema_za_kolok/zad2/slike/opis_zadatka.docx
+www/HTMLCSS/Seminarski/Seminarski rad - Mario Vata.zip
