--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ HTMLCSS/VJ4/aa/index.html
 www/HTMLCSS/VJ5/vjezba6.7z
 www/HTMLCSS/Priprema_za_kolok/zad2/slike/opis_zadatka.docx
 www/HTMLCSS/Seminarski/Seminarski rad - Mario Vata.zip
+www/HTMLCSS/VJ6/Priprema_VJ7.zip
+www/HTMLCSS/VJ6/zad.bsdesign
+www/HTMLCSS/VJ6/zad2.bsdesign
