--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ www/HTMLCSS/Seminarski/Seminarski rad - Mario Vata.zip
 www/HTMLCSS/VJ6/Priprema_VJ7.zip
 www/HTMLCSS/VJ6/zad.bsdesign
 www/HTMLCSS/VJ6/zad2.bsdesign
+www/HTMLCSS/VJ7/MarioVata_Priprema_8.7z
