Added Bootstrap, News page

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ www/HTMLCSS/VJ6/Priprema_VJ7.zip
 www/HTMLCSS/VJ6/zad.bsdesign
 www/HTMLCSS/VJ6/zad2.bsdesign
 www/HTMLCSS/VJ7/MarioVata_Priprema_8.7z
+Python/test.py
+Python/test.py
+Python/vjezba/vj10/1.py
