Added: Priprema 7,8,9 HTML & Python 10

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@ www/HTMLCSS/VJ7/MarioVata_Priprema_8.7z
 Python/test.py
 Python/test.py
 Python/vjezba/vj10/1.py
+Python/Kolokvij2/1.py
+Python/Kolokvij2/2.py
+Python/vjezba/aaa.py
+Python/test.py
+Python/vjezba/vj10/1.py
+www/HTMLCSS/Seminarski/Seminarski rad - Mario Vata_v1.zip
+Python/test.py
+Python/test.py
