VS 2022 Test - GitIgnore Update

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ Python/test.py
 Python/vjezba/vj10/1.py
 www/HTMLCSS/Seminarski/Seminarski rad - Mario Vata_v1.zip
 Python/test.py
+\#2 Semestar Programiranje\3 Primjeri
