--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,3 @@
-vjezba.zip
-readme.txt
-www/HTMLCSS/VJ1/vjezba_2.7z
-www/HTMLCSS/VJ1/firefox_JMk5xUj6V1.png
-
-www/HTMLCSS/VJ2/index2.html
-www/HTMLCSS/VJ2/vj3.7z
-www/HTMLCSS/Shadow/*
-www/HTMLCSS/VJ3/double-bubble-dark/double-bubble-dark.png
-www/HTMLCSS/VJ3/bin
-www/HTMLCSS/VJ5.7z
-www/HTMLCSS/VJ4/aa/style.css
-HTMLCSS/VJ4/aa/index.html
-www/HTMLCSS/VJ5/vjezba6.7z
-www/HTMLCSS/Priprema_za_kolok/zad2/slike/opis_zadatka.docx
-www/HTMLCSS/Seminarski/Seminarski rad - Mario Vata.zip
-www/HTMLCSS/VJ6/Priprema_VJ7.zip
-www/HTMLCSS/VJ6/zad.bsdesign
-www/HTMLCSS/VJ6/zad2.bsdesign
-www/HTMLCSS/VJ7/MarioVata_Priprema_8.7z
 Python/test.py
 Python/test.py
 Python/vjezba/vj10/1.py
@@ -28,4 +8,11 @@ Python/test.py
 Python/vjezba/vj10/1.py
 www/HTMLCSS/Seminarski/Seminarski rad - Mario Vata_v1.zip
 Python/test.py
-\#2 Semestar Programiranje\3 Primjeri
+/#2 Semestar Programiranje/3 Primjeri
+/www/HTMLCSS/shadow
+*.zip
+/.vs/slnx.sqlite
+/.vs/Programiranje/v17/Browse.VC.opendb
+/.vs/Programiranje/v17/Browse.VC.db-wal
+/.vs/Programiranje/v17/Browse.VC.db-shm
+/.vs/Programiranje/v17/Browse.VC.db
